# meteostat-server

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.example.ini  crontab  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: docker-image.yml
server/: __init__.py  utils.py
server/endpoints/point/: daily.py  hourly.py  monthly.py  normals.py
server/endpoints/stations/: daily.py  hourly.py  meta.py  monthly.py  nearby.py  normals.py
tasks/: clean.py  db_import.sh
